--- a/NEWS
+++ b/NEWS
@@ -1,9 +1,11 @@
 
-        CHANGES IN spatstat.linnet VERSION 3.1-5.011
+        CHANGES IN spatstat.linnet VERSION 3.2-0
 
 OVERVIEW
 
     o spatstat.linnet now depends on 'spatstat.univar'.
+
+    o extract the subset of an image that lies on selected segments of network.
 
     o Minor improvements.
 
