--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,11 @@
 
+        CHANGES IN spatstat.linnet VERSION 3.2-1
+
+OVERVIEW
+
+    o Internal tweaks to satisfy CRAN package checker.
+
+
         CHANGES IN spatstat.linnet VERSION 3.2-0
 
 OVERVIEW
