--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,11 @@
 
+        CHANGES IN spatstat.linnet VERSION 3.2-1.001
+
+OVERVIEW
+
+    o Tweaks to documentation.
+
+
         CHANGES IN spatstat.linnet VERSION 3.2-1
 
 OVERVIEW
