--- a/NEWS
+++ b/NEWS
@@ -1,9 +1,11 @@
 
-        CHANGES IN spatstat.linnet VERSION 3.2-1.001
+        CHANGES IN spatstat.linnet VERSION 3.2-1.002
 
 OVERVIEW
 
     o Tweaks to documentation.
+
+    o Internal improvements.
 
 
         CHANGES IN spatstat.linnet VERSION 3.2-1
