Tweaks to satisfy CRAN

--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,11 @@
 
+        CHANGES IN spatstat.linnet VERSION 3.2-5
+
+OVERVIEW
+
+    o Minor changes in documentation to satisfy the package checker.
+
+
         CHANGES IN spatstat.linnet VERSION 3.2-4
 
 OVERVIEW
