--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,11 @@
 
+        CHANGES IN spatstat.linnet VERSION 3.3-1
+
+OVERVIEW
+
+    o Minor changes to documents to satisfy CRAN package checker.
+
+
         CHANGES IN spatstat.linnet VERSION 3.3-0
 
 OVERVIEW
