--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,11 @@
 
+        CHANGES IN spatstat.linnet VERSION 3.3-1.001
+
+OVERVIEW
+
+    o Summary functions handle NA objects.
+
+
         CHANGES IN spatstat.linnet VERSION 3.3-1
 
 OVERVIEW
