--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,11 @@
 
+        CHANGES IN spatstat.linnet VERSION 3.3-2.001
+
+OVERVIEW
+
+    o Minor fixes.
+
+
         CHANGES IN spatstat.linnet VERSION 3.3-2
 
 OVERVIEW
