Tweaks to documentation

--- a/NEWS
+++ b/NEWS
@@ -1,9 +1,9 @@
 
-        CHANGES IN spatstat.linnet VERSION 3.3-2.002
+        CHANGES IN spatstat.linnet VERSION 3.3-2.003
 
 OVERVIEW
 
-    o Minor fixes.
+    o Internal fixes.
 
 
         CHANGES IN spatstat.linnet VERSION 3.3-2
