--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,5 @@
 
-        CHANGES IN spatstat.linnet VERSION 3.3-2.017
+        CHANGES IN spatstat.linnet VERSION 3.3-2.018
 
 OVERVIEW
 
@@ -40,6 +40,9 @@ NEW FUNCTIONS
 
 SIGNIFICANT USER-VISIBLE CHANGES
 
+    o as.linnet.psp
+    New arguments 'chop' and 'fuse'.
+    
     o integral.linim, integral.linfun
     Argument 'domain' can be a tessellation on a network (class 'lintess').
 
